y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList mainF

   3  $$2 :

   4  $$3 :

   5  mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}'

   6  dList : decl dList
   7        |

   8  decl : type ID ';'

   9  type : INT
  10       | FLOAT
  11       | BOOL

  12  lcmd : lcmd cmd
  13       |

  14  cmd : exp ';'
  15      | '{' lcmd '}'
  16      | WRITE '(' LIT ')' ';'

  17  $$4 :

  18  cmd : WRITE '(' LIT $$4 ',' exp ')' ';'
  19      | READ '(' ID ')' ';'

  20  $$5 :

  21  $$6 :

  22  cmd : WHILE $$5 '(' exp ')' $$6 cmd

  23  $$7 :

  24  cmd : IF '(' exp $$7 ')' cmd restoIf

  25  $$8 :

  26  cmd : DO $$8 cmd WHILE '(' exp ')' ';'

  27  $$9 :

  28  $$10 :

  29  $$11 :

  30  cmd : FOR '(' forInit ';' $$9 forCond ';' $$10 forInc ')' $$11 cmd

  31  $$12 :

  32  restoIf : ELSE $$12 cmd
  33          |

  34  exp : NUM
  35      | ID '=' exp
  36      | TRUE
  37      | FALSE
  38      | ID
  39      | '(' exp ')'
  40      | '!' exp
  41      | exp '+' exp
  42      | exp '-' exp
  43      | exp '*' exp
  44      | exp '/' exp
  45      | exp '%' exp
  46      | exp '>' exp
  47      | exp '<' exp
  48      | exp EQ exp
  49      | exp LEQ exp
  50      | exp GEQ exp
  51      | exp NEQ exp
  52      | exp OR exp
  53      | exp AND exp
  54      | ID '=' exp
  55      | ID ADDEQ exp
  56      | ID INC
  57      | ID DEC
  58      | INC ID
  59      | DEC ID
  60      | exp '?' exp ':' exp

  61  forInit :
  62          | exp

  63  forCond :
  64          | exp

  65  forInc :
  66         | exp

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList mainF  (2)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 7
	decl  goto 8


state 3
	type : INT .  (9)

	.  reduce 9


state 4
	type : FLOAT .  (10)

	.  reduce 10


state 5
	type : BOOL .  (11)

	.  reduce 11


state 6
	decl : type . ID ';'  (8)

	ID  shift 9
	.  error


state 7
	prog : $$1 dList . mainF  (2)

	VOID  shift 10
	.  error

	mainF  goto 11


state 8
	dList : decl . dList  (6)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 12
	decl  goto 8


state 9
	decl : type ID . ';'  (8)

	';'  shift 13
	.  error


state 10
	mainF : VOID . MAIN '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	MAIN  shift 14
	.  error


state 11
	prog : $$1 dList mainF .  (2)

	.  reduce 2


state 12
	dList : decl dList .  (6)

	.  reduce 6


state 13
	decl : type ID ';' .  (8)

	.  reduce 8


state 14
	mainF : VOID MAIN . '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	'('  shift 15
	.  error


state 15
	mainF : VOID MAIN '(' . ')' $$2 '{' lcmd $$3 '}'  (5)

	')'  shift 16
	.  error


state 16
	mainF : VOID MAIN '(' ')' . $$2 '{' lcmd $$3 '}'  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 17


state 17
	mainF : VOID MAIN '(' ')' $$2 . '{' lcmd $$3 '}'  (5)

	'{'  shift 18
	.  error


state 18
	mainF : VOID MAIN '(' ')' $$2 '{' . lcmd $$3 '}'  (5)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 19


state 19
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd . $$3 '}'  (5)
	lcmd : lcmd . cmd  (12)
	$$3 : .  (4)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	FOR  shift 25
	DO  shift 26
	WHILE  shift 27
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	'{'  shift 34
	'}'  reduce 4

	$$3  goto 35
	cmd  goto 36
	exp  goto 37


state 20
	exp : ID . '=' exp  (35)
	exp : ID .  (38)
	exp : ID . '=' exp  (54)
	exp : ID . ADDEQ exp  (55)
	exp : ID . INC  (56)
	exp : ID . DEC  (57)

	ADDEQ  shift 38
	INC  shift 39
	DEC  shift 40
	'='  shift 41
	EQ  reduce 38
	LEQ  reduce 38
	GEQ  reduce 38
	NEQ  reduce 38
	AND  reduce 38
	OR  reduce 38
	'>'  reduce 38
	'<'  reduce 38
	'+'  reduce 38
	'-'  reduce 38
	'*'  reduce 38
	'/'  reduce 38
	'%'  reduce 38
	')'  reduce 38
	';'  reduce 38
	'?'  reduce 38
	':'  reduce 38


state 21
	exp : NUM .  (34)

	.  reduce 34


state 22
	cmd : READ . '(' ID ')' ';'  (19)

	'('  shift 42
	.  error


state 23
	cmd : WRITE . '(' LIT ')' ';'  (16)
	cmd : WRITE . '(' LIT $$4 ',' exp ')' ';'  (18)

	'('  shift 43
	.  error


state 24
	cmd : IF . '(' exp $$7 ')' cmd restoIf  (24)

	'('  shift 44
	.  error


state 25
	cmd : FOR . '(' forInit ';' $$9 forCond ';' $$10 forInc ')' $$11 cmd  (30)

	'('  shift 45
	.  error


state 26
	cmd : DO . $$8 cmd WHILE '(' exp ')' ';'  (26)
	$$8 : .  (25)

	.  reduce 25

	$$8  goto 46


state 27
	cmd : WHILE . $$5 '(' exp ')' $$6 cmd  (22)
	$$5 : .  (20)

	.  reduce 20

	$$5  goto 47


state 28
	exp : TRUE .  (36)

	.  reduce 36


state 29
	exp : FALSE .  (37)

	.  reduce 37


state 30
	exp : INC . ID  (58)

	ID  shift 48
	.  error


state 31
	exp : DEC . ID  (59)

	ID  shift 49
	.  error


state 32
	exp : '!' . exp  (40)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 50


state 33
	exp : '(' . exp ')'  (39)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 51


state 34
	cmd : '{' . lcmd '}'  (15)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 52


state 35
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 . '}'  (5)

	'}'  shift 53
	.  error


state 36
	lcmd : lcmd cmd .  (12)

	.  reduce 12


state 37
	cmd : exp . ';'  (14)
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . '?' exp ':' exp  (60)

	EQ  shift 54
	LEQ  shift 55
	GEQ  shift 56
	NEQ  shift 57
	AND  shift 58
	OR  shift 59
	'>'  shift 60
	'<'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	';'  shift 67
	'?'  shift 68
	.  error


state 38
	exp : ID ADDEQ . exp  (55)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 69


state 39
	exp : ID INC .  (56)

	.  reduce 56


state 40
	exp : ID DEC .  (57)

	.  reduce 57


state 41
	exp : ID '=' . exp  (35)
	exp : ID '=' . exp  (54)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 70


state 42
	cmd : READ '(' . ID ')' ';'  (19)

	ID  shift 71
	.  error


state 43
	cmd : WRITE '(' . LIT ')' ';'  (16)
	cmd : WRITE '(' . LIT $$4 ',' exp ')' ';'  (18)

	LIT  shift 72
	.  error


state 44
	cmd : IF '(' . exp $$7 ')' cmd restoIf  (24)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 73


state 45
	cmd : FOR '(' . forInit ';' $$9 forCond ';' $$10 forInc ')' $$11 cmd  (30)
	forInit : .  (61)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	';'  reduce 61

	exp  goto 74
	forInit  goto 75


state 46
	cmd : DO $$8 . cmd WHILE '(' exp ')' ';'  (26)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	FOR  shift 25
	DO  shift 26
	WHILE  shift 27
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	'{'  shift 34
	.  error

	cmd  goto 76
	exp  goto 37


state 47
	cmd : WHILE $$5 . '(' exp ')' $$6 cmd  (22)

	'('  shift 77
	.  error


state 48
	exp : INC ID .  (58)

	.  reduce 58


state 49
	exp : DEC ID .  (59)

	.  reduce 59


50: shift/reduce conflict (shift 68, reduce 40) on '?'
state 50
	exp : '!' exp .  (40)
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . '?' exp ':' exp  (60)

	'?'  shift 68
	EQ  reduce 40
	LEQ  reduce 40
	GEQ  reduce 40
	NEQ  reduce 40
	AND  reduce 40
	OR  reduce 40
	'>'  reduce 40
	'<'  reduce 40
	'+'  reduce 40
	'-'  reduce 40
	'*'  reduce 40
	'/'  reduce 40
	'%'  reduce 40
	')'  reduce 40
	';'  reduce 40
	':'  reduce 40


state 51
	exp : '(' exp . ')'  (39)
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . '?' exp ':' exp  (60)

	EQ  shift 54
	LEQ  shift 55
	GEQ  shift 56
	NEQ  shift 57
	AND  shift 58
	OR  shift 59
	'>'  shift 60
	'<'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	')'  shift 78
	'?'  shift 68
	.  error


state 52
	lcmd : lcmd . cmd  (12)
	cmd : '{' lcmd . '}'  (15)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	FOR  shift 25
	DO  shift 26
	WHILE  shift 27
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	'{'  shift 34
	'}'  shift 79
	.  error

	cmd  goto 36
	exp  goto 37


state 53
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}' .  (5)

	.  reduce 5


state 54
	exp : exp EQ . exp  (48)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 80


state 55
	exp : exp LEQ . exp  (49)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 81


state 56
	exp : exp GEQ . exp  (50)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 82


state 57
	exp : exp NEQ . exp  (51)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 83


state 58
	exp : exp AND . exp  (53)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 84


state 59
	exp : exp OR . exp  (52)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 85


state 60
	exp : exp '>' . exp  (46)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 86


state 61
	exp : exp '<' . exp  (47)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 87


state 62
	exp : exp '+' . exp  (41)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 88


state 63
	exp : exp '-' . exp  (42)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 89


state 64
	exp : exp '*' . exp  (43)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 90


state 65
	exp : exp '/' . exp  (44)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 91


state 66
	exp : exp '%' . exp  (45)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 92


state 67
	cmd : exp ';' .  (14)

	.  reduce 14


state 68
	exp : exp '?' . exp ':' exp  (60)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 93


69: shift/reduce conflict (shift 68, reduce 55) on '?'
state 69
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : ID ADDEQ exp .  (55)
	exp : exp . '?' exp ':' exp  (60)

	EQ  shift 54
	LEQ  shift 55
	GEQ  shift 56
	NEQ  shift 57
	AND  shift 58
	OR  shift 59
	'>'  shift 60
	'<'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'?'  shift 68
	')'  reduce 55
	';'  reduce 55
	':'  reduce 55


70: reduce/reduce conflict (reduce 35, reduce 54) on ')'
70: reduce/reduce conflict (reduce 35, reduce 54) on ';'
70: shift/reduce conflict (shift 68, reduce 35) on '?'
70: shift/reduce conflict (shift 68, reduce 54) on '?'
70: reduce/reduce conflict (reduce 35, reduce 54) on ':'
state 70
	exp : ID '=' exp .  (35)
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : ID '=' exp .  (54)
	exp : exp . '?' exp ':' exp  (60)

	EQ  shift 54
	LEQ  shift 55
	GEQ  shift 56
	NEQ  shift 57
	AND  shift 58
	OR  shift 59
	'>'  shift 60
	'<'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'?'  shift 68
	')'  reduce 35
	';'  reduce 35
	':'  reduce 35


state 71
	cmd : READ '(' ID . ')' ';'  (19)

	')'  shift 94
	.  error


state 72
	cmd : WRITE '(' LIT . ')' ';'  (16)
	cmd : WRITE '(' LIT . $$4 ',' exp ')' ';'  (18)
	$$4 : .  (17)

	')'  shift 95
	','  reduce 17

	$$4  goto 96


state 73
	cmd : IF '(' exp . $$7 ')' cmd restoIf  (24)
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . '?' exp ':' exp  (60)
	$$7 : .  (23)

	EQ  shift 54
	LEQ  shift 55
	GEQ  shift 56
	NEQ  shift 57
	AND  shift 58
	OR  shift 59
	'>'  shift 60
	'<'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'?'  shift 68
	')'  reduce 23

	$$7  goto 97


state 74
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . '?' exp ':' exp  (60)
	forInit : exp .  (62)

	EQ  shift 54
	LEQ  shift 55
	GEQ  shift 56
	NEQ  shift 57
	AND  shift 58
	OR  shift 59
	'>'  shift 60
	'<'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'?'  shift 68
	';'  reduce 62


state 75
	cmd : FOR '(' forInit . ';' $$9 forCond ';' $$10 forInc ')' $$11 cmd  (30)

	';'  shift 98
	.  error


state 76
	cmd : DO $$8 cmd . WHILE '(' exp ')' ';'  (26)

	WHILE  shift 99
	.  error


state 77
	cmd : WHILE $$5 '(' . exp ')' $$6 cmd  (22)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 28
	FALSE  shift 29
	INC  shift 30
	DEC  shift 31
	'!'  shift 32
	'('  shift 33
	.  error

	exp  goto 100


state 78
	exp : '(' exp ')' .  (39)

	.  reduce 39


state 79
	cmd : '{' lcmd '}' .  (15)

	.  reduce 15


80: shift/reduce conflict (shift 68, reduce 48) on '?'
state 80
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp EQ exp .  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . '?' exp ':' exp  (60)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'?'  shift 68
	EQ  reduce 48
	LEQ  reduce 48
	GEQ  reduce 48
	NEQ  reduce 48
	AND  reduce 48
	OR  reduce 48
	'>'  reduce 48
	'<'  reduce 48
	')'  reduce 48
	';'  reduce 48
	':'  reduce 48


81: shift/reduce conflict (shift 68, reduce 49) on '?'
state 81
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp LEQ exp .  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . '?' exp ':' exp  (60)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'?'  shift 68
	EQ  reduce 49
	LEQ  reduce 49
	GEQ  reduce 49
	NEQ  reduce 49
	AND  reduce 49
	OR  reduce 49
	'>'  reduce 49
	'<'  reduce 49
	')'  reduce 49
	';'  reduce 49
	':'  reduce 49


82: shift/reduce conflict (shift 68, reduce 50) on '?'
state 82
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp GEQ exp .  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . '?' exp ':' exp  (60)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'?'  shift 68
	EQ  reduce 50
	LEQ  reduce 50
	GEQ  reduce 50
	NEQ  reduce 50
	AND  reduce 50
	OR  reduce 50
	'>'  reduce 50
	'<'  reduce 50
	')'  reduce 50
	';'  reduce 50
	':'  reduce 50


83: shift/reduce conflict (shift 68, reduce 51) on '?'
state 83
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp NEQ exp .  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . '?' exp ':' exp  (60)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'?'  shift 68
	EQ  reduce 51
	LEQ  reduce 51
	GEQ  reduce 51
	NEQ  reduce 51
	AND  reduce 51
	OR  reduce 51
	'>'  reduce 51
	'<'  reduce 51
	')'  reduce 51
	';'  reduce 51
	':'  reduce 51


84: shift/reduce conflict (shift 68, reduce 53) on '?'
state 84
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : exp AND exp .  (53)
	exp : exp . '?' exp ':' exp  (60)

	EQ  shift 54
	LEQ  shift 55
	GEQ  shift 56
	NEQ  shift 57
	'>'  shift 60
	'<'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'?'  shift 68
	AND  reduce 53
	OR  reduce 53
	')'  reduce 53
	';'  reduce 53
	':'  reduce 53


85: shift/reduce conflict (shift 68, reduce 52) on '?'
state 85
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp OR exp .  (52)
	exp : exp . AND exp  (53)
	exp : exp . '?' exp ':' exp  (60)

	EQ  shift 54
	LEQ  shift 55
	GEQ  shift 56
	NEQ  shift 57
	AND  shift 58
	'>'  shift 60
	'<'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'?'  shift 68
	OR  reduce 52
	')'  reduce 52
	';'  reduce 52
	':'  reduce 52


86: shift/reduce conflict (shift 68, reduce 46) on '?'
state 86
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp '>' exp .  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . '?' exp ':' exp  (60)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'?'  shift 68
	EQ  reduce 46
	LEQ  reduce 46
	GEQ  reduce 46
	NEQ  reduce 46
	AND  reduce 46
	OR  reduce 46
	'>'  reduce 46
	'<'  reduce 46
	')'  reduce 46
	';'  reduce 46
	':'  reduce 46


87: shift/reduce conflict (shift 68, reduce 47) on '?'
state 87
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp '<' exp .  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . '?' exp ':' exp  (60)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'?'  shift 68
	EQ  reduce 47
	LEQ  reduce 47
	GEQ  reduce 47
	NEQ  reduce 47
	AND  reduce 47
	OR  reduce 47
	'>'  reduce 47
	'<'  reduce 47
	')'  reduce 47
	';'  reduce 47
	':'  reduce 47


88: shift/reduce conflict (shift 68, reduce 41) on '?'
state 88
	exp : exp . '+' exp  (41)
	exp : exp '+' exp .  (41)
	exp : exp . '-' exp  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . '?' exp ':' exp  (60)

	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'?'  shift 68
	EQ  reduce 41
	LEQ  reduce 41
	GEQ  reduce 41
	NEQ  reduce 41
	AND  reduce 41
	OR  reduce 41
	'>'  reduce 41
	'<'  reduce 41
	'+'  reduce 41
	'-'  reduce 41
	')'  reduce 41
	';'  reduce 41
	':'  reduce 41


89: shift/reduce conflict (shift 68, reduce 42) on '?'
state 89
	exp : exp . '+' exp  (41)
	exp : exp . '-' exp  (42)
	exp : exp '-' exp .  (42)
	exp : exp . '*' exp  (43)
	exp : exp . '/' exp  (44)
	exp : exp . '%' exp  (45)
	exp : exp . '>' exp  (46)
	exp : exp . '<' exp  (47)
	exp : exp . EQ exp  (48)
	exp : exp . LEQ exp  (49)
	exp : exp . GEQ exp  (50)
	exp : exp . NEQ exp  (51)
	exp : exp . OR exp  (52)
	exp : exp . AND exp  (53)
	exp : exp . '?' exp ':' exp  (60)

	'*'  shift 64
	'/'  shift 65
	'%'  shift 66
	'?'  shift 68
	EQ  reduce 42
	LEQ  reduce 42
	GEQ  reduce 42
	NEQ  reduce 42
	AND  reduce 42
	OR  reduce 42
	'>'  reduce 42
	'<'  reduce 42
	'+'  reduce 42
	'-'  reduce 42
	')'  reduce 42
	';'  reduce 42
	':'  reduce 42

